Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.800***

**   Support SystemVerilog types "byte", "chandle", "int", "longint",
     "shortint", "time", "var" and "void" in variables and functions.

**   Support "program", "package", "import" and $unit.

**   Support typedef and enum.  [by Donal Casey]

**   Support direct programming interface (DPI) "import" and "export".
     Includes an extension to map user $system PLI calls to the DPI.

***  Support assignments of multidimensional slices, bug170. [by Byron Bradley]

***  Support multidimensional inputs/outputs, bug171. [by Byron Bradley]

***  Support "reg [1:0][1:0][1:0]" and "reg x [3][2]", bug176.  [Byron Bradley]

***  Support declarations in loop initializers, bug172.  [by Byron Bradley]

***  Support $test$plusargs and $value$plusargs, but see the docs!

***  Support $sformat and $swrite.

***  Support 1800-2009 define defaults and `undefineall.

***  Add VARHIDDEN warning when signal name hides module name.

***  Add experimental clock domain crossing checks.

***  Add experimental --pipe-filter to filter all Verilog input.

***  Add experimental config files to filter warnings outside of the source.

***  Speed compiles by avoiding including the STL iostream header.
     Application programs may need to include it themselves to avoid errors.

**** Support optional cell parenthesis, bug179. [by Byron Bradley]

**** Support for loop i++, ++i, i--, --i, bug175. [by Byron Bradley]

**** Add Makefile VM_GLOBAL_FAST, listing objects needed to link executables.

**** Add --bbox-unsup option to black-box unsupported UDP tables.

**** Add -Wno-MODDUP option to allow duplicate modules.

**** Fix creating implicit variables for expressions, bug196. [Byron Bradley]

**** Fix duplicate implicit variables under generates, bug201. [Byron Bradley]
