@@ -42,6 +42,7 @@ public:
 	L1364_2001,
 	L1364_2005,
 	L1800_2005,
+	L1800_2009,
 	// ***Add new elements below also***
 	MAX
     };
@@ -52,11 +53,12 @@ public:
 	    "1364-1995",
 	    "1364-2001",
 	    "1364-2005",
-	    "1800-2005"
+	    "1800-2005",
+	    "1800-2009"
 	};
 	return names[m_e];
     };
-    static V3LangCode mostRecent() { return V3LangCode(L1800_2005); }
+    static V3LangCode mostRecent() { return V3LangCode(L1800_2009); }
     bool legal() const { return m_e != ERROR; }
     //
     enum en m_e;
