@@ -65,11 +65,11 @@ endmodule
 module global_mod;
    `INLINE_MODULE
    parameter INITVAL = 0;
-   integer global;
+   integer globali;
 
-   initial global = INITVAL;
+   initial globali = INITVAL;
    function [31:0] getName;  input fake;  getName = "gmod"; endfunction
-   function [31:0] getGlob;  input fake;  getGlob = global;  endfunction
+   function [31:0] getGlob;  input fake;  getGlob = globali;  endfunction
 endmodule
 
 module ma ();
