@@ -5,6 +5,9 @@ indicates the contributor was also the author of the fix; Thanks!
 
 * Verilator 3.800***
 
+**   SystemVerilog 1800-2009 is now the default language.
+     Thus "global" etc are now keywords.  See the --language option.
+
 **   Support SystemVerilog types "byte", "chandle", "int", "longint",
      "shortint", "time", "var" and "void" in variables and functions.
 
